<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mapas.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo_app"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorGris"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/biblioteca"
                    android:background="@color/colorRosa"
                    android:alpha="0.8"
                    android:drawableTop="@mipmap/ic_library_foreground"
                    android:text="@string/library"
                    android:onClick="MostrarMapa"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_width="170dp"
                    android:layout_height="170dp"/>
                <Button
                    android:id="@+id/favoritos"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorVerde"
                    android:alpha="0.8"
                    android:drawableTop="@mipmap/ic_favoritos_foreground"
                    android:onClick="MostrarFavoritos"
                    android:text="@string/favoritos"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_width="170dp"
                    android:layout_height="170dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/universidad"
                    android:background="@color/colorVerde"
                    android:alpha="0.8"
                    android:drawableTop="@mipmap/ic_universidad_foreground"
                    android:text="@string/universidad"
                    android:onClick="MostrarMapa"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_width="170dp"
                    android:layout_height="170dp"/>
                <Button
                    android:id="@+id/female"
                    android:layout_marginTop="30dp"
                    android:alpha="0.8"
                    android:background="@color/colorRosa"
                    android:drawableTop="@mipmap/ic_female_foreground"
                    android:text="@string/female"
                    android:onClick="MostrarMapa"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:fontFamily="monospace"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:layout_width="170dp"
                    android:layout_height="170dp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>